--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -10,12 +10,36 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <ImageView android:layout_width="match_parent"
+        <ru.skillbranch.devintensive.devintensive2019.ui.custom.AspectRatioImageView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:src="@drawable/profile_bg"
             android:scaleType="centerCrop"
+            app:aspectRatio="1.78"
+            />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageButton
+            android:layout_width="@dimen/btn_round_size_40"
+            android:layout_height="@dimen/btn_round_size_40"
+            android:background="@drawable/btn_round_bg"
+            android:src="@drawable/ic_brightness_high_black_24dp" />
+        
+        <ImageView
+            android:layout_width="@dimen/avatar_round_size"
+            android:layout_height="@dimen/avatar_round_size"
+            android:id="@+id/iv_avatar"
+            android:src="@drawable/avatar_default"
+            android:layout_centerHorizontal="true"/>
+        <ImageButton android:layout_width="@dimen/btn_round_size_40"
+            android:layout_height="@dimen/btn_round_size_40"
+            android:background="@drawable/btn_round_bg"
+            android:src="@drawable/ic_edit_black_24dp"
             />
 
+    </RelativeLayout>
 
     </FrameLayout>
 
