Commit #3 in 3.4.2 Android Studio task-4 Верстка окончательная

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -17,31 +17,209 @@
             android:scaleType="centerCrop"
             app:aspectRatio="1.78"
             />
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="@dimen/font_normal_16"
+            >
 
-        <ImageButton
-            android:layout_width="@dimen/btn_round_size_40"
-            android:layout_height="@dimen/btn_round_size_40"
-            android:background="@drawable/btn_round_bg"
-            android:src="@drawable/ic_brightness_high_black_24dp" />
-        
-        <ImageView
-            android:layout_width="@dimen/avatar_round_size"
-            android:layout_height="@dimen/avatar_round_size"
-            android:id="@+id/iv_avatar"
-            android:src="@drawable/avatar_default"
-            android:layout_centerHorizontal="true"/>
-        <ImageButton android:layout_width="@dimen/btn_round_size_40"
-            android:layout_height="@dimen/btn_round_size_40"
-            android:background="@drawable/btn_round_bg"
-            android:src="@drawable/ic_edit_black_24dp"
-            />
+            <ImageButton
+                android:layout_width="@dimen/btn_round_size_40"
+                android:layout_height="@dimen/btn_round_size_40"
+                android:background="@drawable/btn_round_bg"
+                android:src="@drawable/ic_brightness_high_black_24dp"
+                android:layout_toLeftOf="@id/iv_avatar"
+                android:layout_marginRight="@dimen/spacing_huge_32"
+                android:layout_marginTop="36dp"/>
 
-    </RelativeLayout>
+            <ImageView
+                android:layout_width="@dimen/avatar_round_size"
+                android:layout_height="@dimen/avatar_round_size"
+                android:id="@+id/iv_avatar"
+                android:src="@drawable/avatar_default"
+                android:layout_centerHorizontal="true"/>
+            <ImageButton android:layout_width="@dimen/btn_round_size_40"
+                android:layout_height="@dimen/btn_round_size_40"
+                android:background="@drawable/btn_round_bg"
+                android:src="@drawable/ic_edit_black_24dp"
+                android:layout_marginLeft="@dimen/spacing_huge_32"
+                android:layout_marginTop="36dp"
+                android:layout_toRightOf="@id/iv_avatar"
+                />
+            <TextView
+                android:id="@+id/tv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/iv_avatar"
+                android:layout_centerHorizontal="true"
+                tools:text="John Doe"
+                android:textColor="@android:color/white"
+                android:fontFamily="sans-serif-condensed-medium"
+                android:layout_marginTop="@dimen/font_large_20"
+                android:visibility="visible"
+                />
+            <TextView
+                android:id="@+id/tv_rank"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_name"
+                android:layout_centerHorizontal="true"
+                tools:text="Junior Android Developer"
+                android:textColor="@android:color/white"
+                android:fontFamily="sans-serif-condensed-medium"
+                android:textSize="@dimen/font_large_20"
+                android:visibility="visible"
+
+                />
+
+
+
+        </RelativeLayout>
 
     </FrameLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@color/color_primary_light">
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:gravity="center">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/font_large_20"
+                android:text="0"
+                android:fontFamily="sans-serif-condensed-medium"
+                android:drawableLeft="@drawable/ic_sp_24"
+                android:drawablePadding="@dimen/spacing_tiny_4"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/font_normal_16"
+
+                android:text="@string/profile_label_rating"
+                />
+
+        </LinearLayout>
+
+        <view
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/spacing_normal_16"
+            android:layout_marginBottom="@dimen/spacing_normal_16"
+            />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:gravity="center">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/font_large_20"
+                android:drawableLeft="@drawable/ic_respect_24"
+                android:drawablePadding="@dimen/spacing_tiny_4"
+
+                android:text="0"
+                android:fontFamily="sans-serif-condensed-medium"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/font_normal_16"
+
+                android:text="@string/profile_label_respect"
+                />
+        </LinearLayout>
+    </LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/spacing_normal_16">
+        <ImageView
+            android:id="@+id/ic_avatar"
+            android:layout_width="@dimen/btn_round_size_40"
+            android:layout_height="@dimen/btn_round_size_40"
+            android:src="@drawable/ic_avatar"
+            />
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/wr_first_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/ic_avatar"
+            android:layout_marginLeft="@dimen/spacing_normal_16">
+            <EditText
+                android:id="@+id/et_first_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Имя"
+
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/ic_avatar"
+            android:layout_marginLeft="@dimen/spacing_normal_16"
+            android:layout_below="@+id/wr_first_name">
+            <EditText
+                android:id="@+id/et_last_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Фамилия"
+
+                />
+
+        </com.google.android.material.textfield.TextInputLayout>
+    </RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="@dimen/spacing_normal_16">
+
+        <ImageView
+            android:layout_width="@dimen/btn_round_size_40"
+            android:layout_height="@dimen/btn_round_size_40"
+            android:src="@drawable/ic_about"/>
+        <EditText
+            android:id="@+id/et_about"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+
+            android:hint="О себе" />
 
 
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="@dimen/spacing_normal_16">
+
+        <ImageView
+            android:layout_width="@dimen/btn_round_size_40"
+            android:layout_height="@dimen/btn_round_size_40"
+            android:src="@drawable/ic_repo"/>
+        <EditText
+            android:id="@+id/et_repository"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="Репозиторий" />
+
+
+    </LinearLayout>
+
+
+</LinearLayout>
