--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -109,12 +109,6 @@
 
         </LinearLayout>
 
-        <view
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/spacing_normal_16"
-            android:layout_marginBottom="@dimen/spacing_normal_16"
-            />
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -201,16 +195,18 @@
 
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="92dp"
         android:orientation="horizontal"
-        android:padding="@dimen/spacing_normal_16">
+        android:padding="@dimen/spacing_tiny_4">
 
         <ImageView
             android:layout_width="@dimen/btn_round_size_40"
             android:layout_height="@dimen/btn_round_size_40"
-            android:src="@drawable/ic_repo"/>
+            android:src="@drawable/ic_repo" />
+
         <EditText
             android:id="@+id/et_repository"
             android:layout_width="match_parent"
