--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -93,6 +93,7 @@
             android:orientation="vertical"
             android:gravity="center">
             <TextView
+                android:id="@+id/tv_rating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/white"
@@ -209,11 +210,10 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/wr_about"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="51dp"
             android:layout_marginLeft="@dimen/spacing_normal_16"
             app:counterEnabled="true"
-            app:counterMaxLength="128"
-            >
+            app:counterMaxLength="128">
 
             <EditText
                 android:id="@+id/et_about"
