--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -25,6 +25,7 @@
             >
 
             <ImageButton
+                android:id="@+id/btn_switch_theme"
                 android:layout_width="@dimen/btn_round_size_40"
                 android:layout_height="@dimen/btn_round_size_40"
                 android:background="@drawable/btn_round_bg"
@@ -85,7 +86,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="@color/color_primary_light">
+        android:background="?attr/colorAccentedSurface">
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -191,7 +192,7 @@
         <View
         android:layout_width="wrap_content"
         android:layout_height="1dp"
-        android:background="@color/color_divider_dark"
+        android:background="?attr/colorDivider"
         android:layout_marginLeft="@dimen/space_maximum_72"
         />
 
